--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "NestJS project with OpenAI integration for demo",
   "main": "dist/main.js",
   "scripts": {
-    "start": "nest start",
+    "docker:start": "docker-compose up -d",
+    "start": "npm run docker:start && nest start",
     "start:dev": "nest start --watch",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -25,7 +26,9 @@
     "node-fetch": "^3.3.2",
     "openai": "^3.3.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "@elastic/elasticsearch": "^8.0.0",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
